--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Buzzoffall Art Gallary</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/css/style.css">
-    <link rel="stylesheet" href="../public/css/homeanime.css">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/homeanime.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-    <script src="../public/sketch.js"></script>
+    <script src="public/sketch.js"></script>
 </head>
 
 
@@ -32,28 +32,28 @@
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="views/music.html">Music</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Geometry Art</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="whiteart.html">White Art</a>
-                            <a class="dropdown-item" href="colorart.html">Color Art</a>
-                            <a class="dropdown-item" href="fractalart.html">Fractal Art</a>
-                            <a class="dropdown-item" href="movieart.html">Movie Art</a>
+                            <a class="dropdown-item" href="views/whiteart.html">White Art</a>
+                            <a class="dropdown-item" href="views/colorart.html">Color Art</a>
+                            <a class="dropdown-item" href="views/fractalart.html">Fractal Art</a>
+                            <a class="dropdown-item" href="views/movieart.html">Movie Art</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Novel</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="Lightning.html">落雷</a>
+                            <a class="dropdown-item" href="views/Lightning.html">落雷</a>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://imprintreading.herokuapp.com/" target="_blank">刻印読書</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="form.html">お問い合わせ</a>
+                        <a class="nav-link disabled" href="views/form.html">お問い合わせ</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -70,7 +70,6 @@
         <p class="lead">作曲をメインとし、幾何学模様や小説、Webアプリケーションの開発も行っています。</p>
         <hr class="my-4">
         <p>各種アカウントはこちらから</p>
-        <a class="btn btn-primary btn-lg d-none" href="#" role="button">Twitter</a>
         <a class="btn btn-instagram btn-lg" href="https://www.instagram.com/xiajijitian?ref=badge" role="button" target="_blank"><i class="fab fa-instagram mr-2"></i>Instagram</a>
         <a class="btn btn-soundcloud btn-lg" href="https://soundcloud.com/natsuki-yoshida-209704567" role="button" target="_blank"><i class="fab fa-soundcloud mr-2"></i>SoundCloud</a>
     </div>
@@ -84,7 +83,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="music.html" class="homelink"><i class="fas fa-caret-right"></i>Music<span>  (more...)</span></a>
+                    <a href="views/music.html" class="homelink"><i class="fas fa-caret-right"></i>Music<span>  (more...)</span></a>
                 </h1>
             </div>
         </div>
@@ -106,7 +105,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="whiteart.html" class="homelink"><i class="fas fa-caret-right"></i>Geometry Art<span>  (more...)</span></a>
+                    <a href="views/whiteart.html" class="homelink"><i class="fas fa-caret-right"></i>Geometry Art<span>  (more...)</span></a>
                 </h1>
             </div>
         </div>
@@ -126,7 +125,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="Lightning.html" class="homelink"><i class="fas fa-caret-right"></i>Novel<span>  (more...)</span></a>
+                    <a href="views/Lightning.html" class="homelink"><i class="fas fa-caret-right"></i>Novel<span>  (more...)</span></a>
                 </h1>
             </div>
         </div>
