--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buzzoffall Art Gallary</title>
+    <title>Buzzoffall Work Gallery</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/style.css">
@@ -22,7 +22,7 @@
 <body>
     <div class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand">Buzzoffall Work Gallary</a>
+            <a class="navbar-brand">Buzzoffall Work Gallery</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -66,7 +66,7 @@
 
 
     <div class="jumbotron">
-        <h1 class="display-4 mt-5">Buzzoffall Work Gallary</h1>
+        <h1 class="display-4 mt-5">Buzzoffall Work Gallery</h1>
         <p class="lead">作曲をメインとし、幾何学模様や小説、Webアプリケーションの開発も行っています。</p>
         <hr class="my-4">
         <p>各種アカウントはこちらから</p>
@@ -83,7 +83,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="views/music.html" class="homelink"><i class="fas fa-caret-right"></i>Music<span>  (more...)</span></a>
+                    <a href="views/music.html" class="homelink"><i class="fas fa-caret-right"></i>Music<span> (more...)</span></a>
                 </h1>
             </div>
         </div>
@@ -105,7 +105,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="views/whiteart.html" class="homelink"><i class="fas fa-caret-right"></i>Geometry Art<span>  (more...)</span></a>
+                    <a href="views/whiteart.html" class="homelink"><i class="fas fa-caret-right"></i>Geometry Art<span> (more...)</span></a>
                 </h1>
             </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="views/Lightning.html" class="homelink"><i class="fas fa-caret-right"></i>Novel<span>  (more...)</span></a>
+                    <a href="views/Lightning.html" class="homelink"><i class="fas fa-caret-right"></i>Novel<span> (more...)</span></a>
                 </h1>
             </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="row mb-3">
             <div class="col-12">
                 <h1 class="home-title">
-                    <a href="https://imprintreading.herokuapp.com/" target="_blank" class="homelink"><i class="fas fa-caret-right"></i>刻印読書<span>  (more...)</span></a>
+                    <a href="https://imprintreading.herokuapp.com/" target="_blank" class="homelink"><i class="fas fa-caret-right"></i>刻印読書<span> (more...)</span></a>
                 </h1>
             </div>
         </div>
@@ -168,6 +168,4 @@
 
 
 
-</body>
-
-</html>
+</body></html>
