--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h5 class="novel-sentence">　変拍子を取り入れた音楽を中心に作曲をしています。長年に渡るリズム研究により、複雑なリズムパターンを生み出すことができました。</h5>
                 <h5 class="novel-sentence">　「何度聴いても飽きない曲」をコンセプトとして作曲をしています。繰り返しを極力減らし、常に展開が読めないような曲が多いです。また、遊び心を沢山細かく盛り込んでいるので、聴くたびに発見があるような曲が多いです。</h5>
                 <h5 class="novel-sentence">　カルチャー音楽を聴くことも多いので、異国情緒溢れる楽曲も作ることができます。</h5>
-                <h5 class="novel-sentence">　作曲は主にMuseScoreやGarageBandで行っています。</h5>
+                <h5 class="novel-sentence">　作曲は主にLogic ProやMuseScoreで行っています。</h5>
                 <h5 class="novel-sentence"></h5>
                 <h5 class="novel-sentence"></h5>
 
